--- a/src/App.css
+++ b/src/App.css
@@ -38,12 +38,11 @@ header h3 {
   font-weight: bold;
 }
 
-.posts {
-  flex: 3;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  overflow-y: auto;
-  width: 100%;
-  max-width: 800px; 
+article{
+  margin-top: 5rem;
+  display : flex;
+  gap: 5rem;
+  justify-content: center;
 }
+
+
