--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 1280px;
   padding: 5rem 2rem 2rem;
 }
 
@@ -39,10 +38,27 @@ header h3 {
 }
 
 article{
-  margin-top: 5rem;
+  margin-top: 3rem;
   display : flex;
   gap: 5rem;
   justify-content: center;
+  width: 100%;
+}
+
+div.load-subreddits {
+  box-shadow: 0px 11px 11px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+}
+
+div.load-subreddits:hover {
+  box-shadow: 0px 11px 20px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 
